Add email and password query parameters
